Fixes #17: Implement atomic write to the DLQ table with Kafka acknowledgement and made order. Implement the order service + inventory service to use asynchronous communication and implement outbox + CDC pattern for this

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -98,6 +98,21 @@ app.debezium.connector-url=http://localhost:8083/connectors
 app.debezium.topics.orders=trackops_orders.public.orders
 app.debezium.topics.order-items=trackops_orders.public.order_items
 
+# Inventory reserve request: notify inventory after ORDER_CREATED
+# mode=outbox: enqueue in same tx, Java scheduler sends to Kafka with retries
+# mode=cdc: enqueue in same tx, Debezium streams outbox table to Kafka; relay consumer produces to topic and marks SENT
+# mode=sync: block until Kafka ack (stronger guarantee, lower throughput)
+app.inventory.reserve-request.enabled=true
+app.inventory.reserve-request.mode=outbox
+app.inventory.reserve-request.topic=INVENTORY_RESERVE_REQUEST
+app.inventory.reserve-request.send-timeout-seconds=10
+# CDC (when mode=cdc): topic Debezium writes to for inventory_reserve_outbox
+app.inventory.reserve-request.cdc.topic=trackops_orders.public.inventory_reserve_outbox
+# Outbox processor (when mode=outbox)
+app.inventory.reserve-request.outbox.poll-interval-ms=2000
+app.inventory.reserve-request.outbox.batch-size=50
+app.inventory.reserve-request.outbox.max-retries=5
+
 # Redis Cache Configuration
 app.cache.ttl.order=3600
 app.cache.ttl.status=1800
